[package]
name = "ispgwd"
version = "0.1.0"
edition = "2021"

[lib]
name = "ispgw"

[dependencies]
anyhow             = "1.0"
pnet               = "0.28"
serde              = "1.0"
serde_derive       = "1.0"
serde_yaml         = "0.8"
structopt          = "0.3"
thiserror          = "1.0"
tracing            = "0.1.26"
tracing-subscriber = "0.2.19"
